--- a/pids-boot.service
+++ b/pids-boot.service
@@ -5,7 +5,7 @@ After=local-fs.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/fim -a -q /usr/local/share/pids/pids.png
+ExecStart=/usr/bin/fim -a -q /usr/local/share/pids/pids.png -c 'quit'
 
 [Install]
 WantedBy=sysinit.target
